# vst-2

./: .gitignore  Cargo.toml  Makefile  README.md
assets/environment/: .template.local.env  Dockerfile.dev  docker-compose.yml
assets/postman/: vst-2.postman_collection.json
src/: controller.rs  main.rs
src/application/: mod.rs
src/application/interfaces/: use_case.rs
src/common/: mod.rs
src/common/adapters/gateways/daos/: stock_order_transaction_dao_gateway_impl.rs
src/common/infrastructure/clients/stream/: stream_producer_client.rs
src/common/infrastructure/configurations/env/: env_loader.rs
src/common/infrastructure/factories/: common_gateways_factory.rs
src/common/infrastructure/runners/: stream_consumer_runner.rs  web_server_runner.rs
src/features/stocks/: mod.rs
src/features/stocks/application/use_cases/: get_stocks_summary_use_case.rs  purchase_stock_use_case.rs  sell_stock_use_case.rs
src/features/stocks_api/: mod.rs
src/features/stocks_api/application/interfaces/: use_case.rs
src/features/stocks_api/application/use_cases/: get_stocks_summary_use_case.rs  purchase_stock_use_case.rs  sell_stock_use_case.rs  test_consume_use_case.rs
src/features/stocks_api/domain/entities/: stock_order.rs
src/features/stocks_api/infrastructure/builders/: stock_entrypoints_builder.rs  stock_gateways_builder.rs  stock_use_cases_builder.rs
src/features/stocks_api/infrastructure/factories/: stock_entrypoints_factory.rs  stock_gateways_factory.rs  stock_use_cases_factory.rs
src/features/stocks_api/infrastructure/routers/: stock_consumer_router.rs  stock_controller_router.rs
src/features/transactions_worker/: mod.rs
src/features/transactions_worker/application/use_cases/: create_stock_order_transaction_use_case.rs
src/features/transactions_worker/domain/entities/: stock_order_transaction.rs
src/features/transactions_worker/infrastructure/factories/: transaction_entrypoints_factory.rs  transaction_gateways_factory.rs  transaction_use_cases_factory.rs
src/features/transactions_worker/infrastructure/routers/: transaction_consumer_router.rs
src/infrastructure/: mod.rs
src/infrastructure/clients/stream/: stream_consumer_client.rs  stream_producer_client.rs
src/infrastructure/configurations/: env.rs  env_loader.rs  stream_consumer_runner.rs
src/infrastructure/runners/: stream_consumer_runner.rs  web_server_runner.rs
src/infrastructure/stream/: stream_consumer_client.rs  stream_producer_client.rs
src/infrastructure/stream/client/: stream_consumer_client.rs  stream_producer_client.rs
src/infrastructure/web/: web_server.rs
(+24 files in other folders)
