[package]
name = "vst-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cargo-watch = "8.4.1"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.74"
warp = "0.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
validator = { version = "0.16", features = ["derive"] }
chrono = "0.4.31"