[package]
name = "vst-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cargo-watch = "8.4.1"                                           # development hot reload

[dependencies]
tokio = { version = "1", features = ["full"] }                  # async runtime
warp = "0.3"                                                    # async http web framework
async-trait = "0.1.74"                                          # enable async traits
lazy_static = "1.4.0"                                           # enable create static resources with custom initializer
dotenv = "0.15.0"                                               # load env variables(dev environment only)
serde = { version = "1.0.192", features = ["derive"] }          # serialization
serde_json = "1.0.108"                                          # serialization for json
validator = { version = "0.16", features = ["derive"] }         # validator for structs
regex = "1.4"                                                   # regex builder
chrono = { version = "0.4.31", features = ["serde"] }           # datetime utils
rand = "0.8.5"                                                  # random numbers generator
uuid = { version = "1.6.1", features = ["v4"] }               # uuid generator
reqwest = { version = "0.11", features = ["json"] }             # http requests client
rdkafka = "0.36.0"                                              # kafka client
tokio-postgres = "0.7.10"                                       # sql client to interact with materialize
